feat: -add chatHub with SignalR -add worker consumer -add worker producer -add stockbot logic

--- a/StockChat.Api/StockChat.Application/StockChat.Application.csproj
+++ b/StockChat.Api/StockChat.Application/StockChat.Application.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\StockChat.Domain\StockChat.Domain.csproj" />
+    <ProjectReference Include="..\StockChat.Infrastructure\StockChat.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
