--- a/StockChat.Api/StockChat.Infrastructure/StockChat.Infrastructure.csproj
+++ b/StockChat.Api/StockChat.Infrastructure/StockChat.Infrastructure.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StockChat.Domain\StockChat.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
